fix pdf missing on mobile

--- a/CSS/statistics.css
+++ b/CSS/statistics.css
@@ -43,3 +43,16 @@ body{
   width: 100%;
   height: 100%;
 }
+
+.google-form-answers-mobile{
+  text-align: center;
+  color: white;
+}
+
+.google-form-answers-mobile-text{
+  font-size: 2rem;
+}
+
+.google-form-answers-mobile-text-2{
+  padding: 30% 10%;
+}
